GNOME Bugzilla – Bug 730125
c7d68da broke W32 builds
Last modified: 2014-05-14 12:42:49 UTC
The "breach" is unused if G_OS_WIN32 is defined.
Created attachment 276527 [details] [review] No need for beaches on W32
Was fixing it just as you posted the bug url, sorry :) commit 48b608337beb2fd539b83dd10fc3440a67370adc Author: Tim-Philipp Müller <tim@centricular.com> Date: Wed May 14 13:40:03 2014 +0100 pluginloader: fix compiler warning on windows gstpluginloader.c:584:1: error: label 'beach' defined but not used https://bugzilla.gnome.org/show_bug.cgi?id=730125
Comment on attachment 276527 [details] [review] No need for beaches on W32 Committed the same thing.